tests/ui/resolve/112590-2.stderr
error[E0433]: failed to resolve: could not find `baf` in `foo`
  --> $DIR/112590-2.rs:12:39
   |
LL |         let _: Vec<i32> = super::foo::baf::baz::MyVec::new();
   |                                       ^^^ could not find `baf` in `foo`
   |
help: consider importing this struct through its public re-export
   |
LL +     use foo::bar::baz::MyVec;
   |
help: if you import `MyVec`, refer to it directly
   |
LL -         let _: Vec<i32> = super::foo::baf::baz::MyVec::new();
LL +         let _: Vec<i32> = MyVec::new();
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fox`
  --> $DIR/112590-2.rs:18:27
   |
LL |         let _: Vec<i32> = fox::bar::baz::MyVec::new();
   |                           ^^^ use of unresolved module or unlinked crate `fox`
   |
   = help: you might be missing a crate named `fox`
help: consider importing this struct through its public re-export
   |
LL +     use foo::bar::baz::MyVec;
   |
help: if you import `MyVec`, refer to it directly
   |
LL -         let _: Vec<i32> = fox::bar::baz::MyVec::new();
LL +         let _: Vec<i32> = MyVec::new();
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `vec`
  --> $DIR/112590-2.rs:24:15
   |
LL |     type _B = vec::Vec::<u8>;
   |               ^^^ use of unresolved module or unlinked crate `vec`
   |
   = help: you might be missing a crate named `vec`
help: consider importing this module
   |
LL + use std::vec;
   |

error[E0433]: failed to resolve: could not find `sync_error` in `std`
  --> $DIR/112590-2.rs:25:19
   |
LL |     let _t = std::sync_error::atomic::AtomicBool::new(true);
   |                   ^^^^^^^^^^ could not find `sync_error` in `std`
   |
help: consider importing this struct
   |
LL + use std::sync::atomic::AtomicBool;
   |
help: if you import `AtomicBool`, refer to it directly
   |
LL -     let _t = std::sync_error::atomic::AtomicBool::new(true);
LL +     let _t = AtomicBool::new(true);
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `vec`
  --> $DIR/112590-2.rs:23:24
   |
LL |     let _t: Vec<i32> = vec::new();
   |                        ^^^
   |                        |
   |                        use of unresolved module or unlinked crate `vec`
   |                        help: a struct with a similar name exists (notice the capitalization): `Vec`
   |
   = help: you might be missing a crate named `vec`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0433`.
